# Tether

./: .gitignore  CONTRIBUTORS.md  Dockerfile  KILO_BOOTSTRAP.md  LICENSE  README.md  SYSTEM_PROMPT.txt  docker-compose.yml  hlx_codex_v0.1.0 .json  hlx_codex_v0.1.0 copy.txt  hlx_examples.hlx  hlx_runtime_conformance.json  hlx_runtime_conformance_v0.1.0.json  pyproject.toml  sd8_canonical_hotfix.hlx  tether_codex.json  tether_contracts.json  tether_examples.tthr  tether_grammar.ebnf  tether_runtime_conformance.json  tether_terminology_canon.json  v1.3 _patch
changelog/: v1.0.md  v1.1.md  v1.2.md  v1.3.md  v1.4.md
demos/: first_contact.md
hlx_bootstrap_capsule_v1.0.0/: README.md  SYSTEM_PROMPT.txt  hlx_codex.json  hlx_contracts.json  hlx_examples.hlx  hlx_runtime_conformance.json  hlx_triggers.yaml  lc12_manifest_schema.json
hlx_bootstrap_capsule_v1.2/: README.md  SYSTEM_PROMPT.txt  hlx_codex.json  hlx_examples.hlxl  hlx_grammar.ebnf  hlx_runtime_conformance.json  lc12_manifest_schema.json
hlx_bootstrap_capsule_v1.3/: README.md  hlx_codex.json  hlx_examples.hlxl
integrations/: gemini_mcp_server.py
scripts/: google-sheets-appscript.js
tether/: __init__.py  __main__.py  exceptions.py  full_runtime.py  http_server.py  lc.py  mcp_server.py  runtime.py  sqlite_runtime.py  transport.py
